<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <!-- 使用说明 -->

    <include layout="@layout/form_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/dp20"
            android:paddingStart="@dimen/dp20">

            <LinearLayout
                android:id="@+id/ll_instructions_item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/view_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/iconSize"
                        android:src="@mipmap/icon_daily_3" />

                    <TextView
                        style="@style/instructions_title_text"
                        android:text="@string/instructions1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5">

                    <TextView
                        style="@style/instructions_content_text"
                        android:text="@string/instructions1_1" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instructions_item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/view_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/iconSize"
                        android:src="@mipmap/icon_daily_5" />

                    <TextView
                        style="@style/instructions_title_text"
                        android:text="@string/instructions2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5">

                    <TextView
                        style="@style/instructions_content_text"
                        android:text="@string/instructions2_1" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instructions_item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/view_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/iconSize"
                        android:src="@mipmap/icon_daily_4" />

                    <TextView
                        style="@style/instructions_title_text"
                        android:text="@string/instructions3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5">

                    <TextView
                        style="@style/instructions_content_text"
                        android:text="@string/instructions3_1" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instructions_item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/view_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/iconSize"
                        android:src="@mipmap/img_head1" />

                    <TextView
                        style="@style/instructions_title_text"
                        android:text="@string/instructions4" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5">

                    <TextView
                        style="@style/instructions_content_text"
                        android:text="@string/instructions4_1" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_instructions_item5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/view_line" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp30"
                    android:gravity="center_vertical">

                    <ImageView
                        style="@style/iconSize"
                        android:src="@mipmap/icon_wallet" />

                    <TextView
                        style="@style/instructions_title_text"
                        android:text="@string/instructions5" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp40"
                    android:layout_marginTop="@dimen/dp5">

                    <TextView
                        style="@style/instructions_content_text"
                        android:text="@string/instructions5_1" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
