<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/base_form">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp180"
        android:background="@color/bg_form_head"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="@dimen/dp60">

            <ImageView
                style="@style/main_bottom_item_img"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp12"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tab4name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp22" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginTop="@dimen/dp30">

            <com.ysy15350.ysyutils.custom_view.RoundImageView
                android:id="@+id/img_head"
                android:layout_width="@dimen/dp77"
                android:layout_height="@dimen/dp77"
                android:layout_marginStart="@dimen/dp20"
                android:src="@mipmap/icon_head_test"
                custom:rtype="circle" />

            <!--中间-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp12"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/tab4name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp22" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="ID:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp20" />


            </LinearLayout>
            <!--中间end-->

            <!--右边-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">


                <ImageView
                    style="@style/main_bottom_item_img"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:src="@mipmap/icon_right_white" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_menu_1"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu1" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu1" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:background="@color/white"
        android:orientation="vertical">

        <!--#######菜单1#######-->
        <LinearLayout
            android:id="@+id/ll_menu_2"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu2" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu2" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>

        <View style="@style/view_line_menu" />

        <!--#######菜单2#######-->
        <LinearLayout
            android:id="@+id/ll_menu_3"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu3" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu3" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>

        <View style="@style/view_line_menu" />

        <!--#######菜单3#######-->
        <LinearLayout
            android:id="@+id/ll_menu_4"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu4" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu4" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>

        <View style="@style/view_line_menu" />

        <!--#######菜单4#######-->
        <LinearLayout
            android:id="@+id/ll_menu_5"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu5" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu5" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>

        <View style="@style/view_line_menu" />

        <!--#######菜单5#######-->
        <LinearLayout
            android:id="@+id/ll_menu_6"
            style="@style/tab3_menu_item">

            <ImageView
                style="@style/tab3_menu_item_icon"
                android:src="@mipmap/icon_tab4_menu6" />

            <TextView
                style="@style/tab3_menu_item_text"
                android:text="@string/main_tab4_menu6" />

            <ImageView style="@style/tab3_menu_item_right" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
